[tool.poetry]
name = "rpg-ml-rl"
version = "0.1.0"
description = "Role Playing Game help RL learn about Casuality"
authors = ["Rohit Tamidapati"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
transformers = "^4.47.0"
requests = "^2.32.3"
numpy = "^2.1.3"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
scipy = "^1.14.1"
jupyter = "^1.1.1"
lab = "^8.3"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
